feat: implement NativeLocalStorage functionality in iOS React Native app

--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "jsSrcsDir": "specs",
     "android": {
       "javaPackageName": "com.nativelocalstorage"
+    },
+    "ios": {
+      "modulesProvider": {
+        "NativeLocalStorage": "RCTNativeLocalStorage"
+      }
     }
   },
   "dependencies": {
